# src/main/java/com/parkinglotmanager/repository/models/ParkingLotEntity.java
@@ -1,12 +1,16 @@
 package com.parkinglotmanager.repository.models;
 
+import java.util.ArrayList;
 import java.util.List;
 
 import javax.persistence.CascadeType;
 import javax.persistence.Column;
 import javax.persistence.Entity;
+import javax.persistence.JoinColumn;
+import javax.persistence.ManyToOne;
 import javax.persistence.OneToMany;
 import javax.persistence.Table;
+import javax.persistence.UniqueConstraint;
 
 import lombok.AllArgsConstructor;
 import lombok.Builder;
@@ -15,12 +19,13 @@ import lombok.EqualsAndHashCode;
 import lombok.NoArgsConstructor;
 
 @Entity
-@Table(name = "PARKING_LOT")
+@Table(name = "PARKING_LOT", uniqueConstraints = { @UniqueConstraint(columnNames = { "code" }) })
 @Data
 @EqualsAndHashCode(callSuper = true)
 @Builder
 @AllArgsConstructor
 @NoArgsConstructor
+
 public class ParkingLotEntity extends AbstractBaseEntity {
 
 	@Column
@@ -38,9 +43,11 @@ public class ParkingLotEntity extends AbstractBaseEntity {
 	@Column
 	private Integer bigKwSlots;
 
-	@Column
-	private Integer pricingStrategy;
+	@ManyToOne(cascade = CascadeType.ALL)
+	@JoinColumn(name = "pricingPolicy_id")
+	private PricingPolicyEntity pricingPolicy;
 
+	@Builder.Default
 	@OneToMany(orphanRemoval = true, cascade = CascadeType.ALL)
-	private List<ParkingSpaceEntity> parkingSpaces;
+	private List<ParkingSpaceEntity> parkingSpaces = new ArrayList<ParkingSpaceEntity>();
 }
